feat: package archiving (#736)
Closes #250

---------
