# api/src/api.yml
@@ -1804,6 +1804,13 @@ components:
               $ref: "#/components/schemas/RuntimeCompat"
           required:
             - runtimeCompat
+        - type: object
+          properties:
+            isArchived:
+              type: boolean
+              description: Whether this package should be archived or not.
+          required:
+            - isArchived
 
     RuntimeCompat:
       type: object
